# rust-order-book

./: .env  HFT_System_Context.md  README.md  docker-compose.yml
infra/: GRACEFUL_DEGRADATION.md  OBSERVABILITY.md
infra/docker/: observability.compose.yml
infra/docker/clickhouse/: init.sql
infra/docker/jaeger/: sampling.json
infra/docker/postgres/: init.sql
infra/grafana/dashboards/: hft-overview.json  infra.json  kafka.json  latency.json  risk.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/kubernetes/cluster/: ingress.yaml  kafka-statefulset.yaml  namespace.yaml  network-policy.yaml  postgres-statefulset.yaml  redis-statefulset.yaml
infra/kubernetes/services/: api-gateway.yaml  auth-service.yaml  market-data-service.yaml  matching-engine.yaml  order-service.yaml  portfolio-service.yaml  risk-engine.yaml
infra/prometheus/: alerts.yml  prometheus.yml
matching-engine/: Cargo.toml  Dockerfile  README.md
matching-engine/crates/grpc-server/: Cargo.toml  build.rs
matching-engine/crates/grpc-server/src/: lib.rs  service.rs
matching-engine/crates/grpc-server/tests/: service_test.rs
matching-engine/crates/kafka-bridge/: Cargo.toml
matching-engine/crates/kafka-bridge/src/: consumer.rs  error.rs  lib.rs  messages.rs  producer.rs
matching-engine/crates/matching-engine/: Cargo.toml
matching-engine/crates/matching-engine/src/: config_loader.rs  engine.rs  grpc_handle.rs  main.rs  metrics.rs  metrics_server.rs
matching-engine/crates/orderbook/: Cargo.toml
matching-engine/crates/orderbook/benches/: match_bench.rs
matching-engine/crates/orderbook/src/: book.rs  error.rs  lib.rs  order.rs  price_level.rs  snapshot.rs  stop_orders.rs  trade.rs
matching-engine/crates/orderbook/tests/: matching.rs
matching-engine/crates/proto-gen/: Cargo.toml  build.rs
matching-engine/crates/proto-gen/src/: lib.rs
matching-engine/crates/redis-bridge/: Cargo.toml
matching-engine/crates/redis-bridge/src/: lib.rs
matching-engine/proto/: order.proto  orderbook.proto  trade.proto
scripts/: create-topics.sh  start.sh  verify.sh
scripts/chaos/: kill-kafka-broker.sh  kill-matching-engine.sh  network-partition.sh  verify-consistency.sh
scripts/fix-test-client/: fix_client.py  initiator.cfg
scripts/load-test/: README.md  mixed-load.js  order-flood.js  websocket-stress.js
services/auth-service/: Dockerfile  pom.xml
services/auth-service/src/main/java/com/hft/auth/: AuthServiceApplication.java
services/auth-service/src/main/java/com/hft/auth/config/: AuthProperties.java  PasswordConfig.java  RedisConfig.java  SecurityConfig.java
services/auth-service/src/main/java/com/hft/auth/controller/: ApiKeyController.java  AuthController.java
services/auth-service/src/main/java/com/hft/auth/dto/: ApiKeyCreateRequest.java  ApiKeyResponse.java  LoginRequest.java  RefreshRequest.java  RegisterRequest.java  TokenResponse.java  UserDto.java
services/auth-service/src/main/java/com/hft/auth/exception/: AuthException.java  GlobalExceptionHandler.java
services/auth-service/src/main/java/com/hft/auth/mapper/: UserMapper.java
services/auth-service/src/main/java/com/hft/auth/model/: ApiKey.java  Role.java  User.java
services/auth-service/src/main/java/com/hft/auth/repository/: ApiKeyRepository.java  UserRepository.java
services/auth-service/src/main/java/com/hft/auth/security/: ApiKeyAuthenticationFilter.java  AuthenticatedUser.java  BearerTokenConverter.java  JwtAuthenticationManager.java  JwtUtil.java  RateLimitWebFilter.java
services/auth-service/src/main/java/com/hft/auth/service/: ApiKeyService.java  AuthService.java  RateLimitService.java  RefreshTokenService.java  SessionService.java  UserService.java
services/auth-service/src/main/resources/: application.yml  schema.sql
services/auth-service/src/test/java/com/hft/auth/controller/: AuthControllerTest.java
services/auth-service/src/test/java/com/hft/auth/security/: JwtUtilTest.java
services/auth-service/src/test/java/com/hft/auth/service/: ApiKeyServiceTest.java  AuthServiceTest.java  RateLimitServiceTest.java  UserServiceTest.java
services/market-data-service/: Dockerfile  pom.xml
services/market-data-service/src/main/java/com/hft/marketdata/: MarketDataApplication.java
services/market-data-service/src/main/java/com/hft/marketdata/candle/: CandleAggregator.java  CandleQueryService.java
services/market-data-service/src/main/java/com/hft/marketdata/config/: RedisConfig.java  (+3 more)
services/market-data-service/src/main/resources/: application.yml  clickhouse-schema.sql
services/order-service/: Dockerfile  pom.xml
services/order-service/src/main/java/com/hft/order/: OrderServiceApplication.java
services/order-service/src/main/resources/: application.yml  schema.sql
services/order-service/src/main/resources/fix/: acceptor.cfg
services/portfolio-service/: Dockerfile  pom.xml
services/portfolio-service/src/main/java/com/hft/portfolio/: PortfolioServiceApplication.java
services/portfolio-service/src/main/resources/: application.yml  schema.sql
services/risk-engine/: Dockerfile  pom.xml
services/risk-engine/src/main/java/com/hft/risk/: RiskEngineApplication.java
services/risk-engine/src/main/resources/: application.yml
services/shared-grpc-lib/: pom.xml
services/shared-grpc-lib/src/main/proto/: matching_engine.proto
services/shared-kafka-lib/: README.md  pom.xml
services/shared-lib/: pom.xml
services/shared-observability-lib/: pom.xml
(+199 files in other folders)
