[package]
name = "grpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "tonic gRPC server exposing the matching engine for synchronous queries"

[dependencies]
orderbook = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
