[package]
name = "kafka-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async Kafka consume/publish for HFT matching engine"

[dependencies]
orderbook = { workspace = true }
rdkafka = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
