[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HFT matching engine binary"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
orderbook = { workspace = true }
kafka-bridge = { workspace = true }
redis-bridge = { workspace = true }
grpc-server = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
config = { workspace = true }
indexmap = { workspace = true }
prometheus = { workspace = true }
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1.7"
