[package]
name = "redis-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Redis snapshot writer/reader for the matching engine"

[dependencies]
orderbook = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
